--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mutt/forms": "^2.3.0",
+    "@mutt/widgets-vue": "^2.5.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
